# simple-image-extractor

./: .gitignore  ImageExtractor.py  README.md  S3Uploader.py  main.py  pyproject.toml  requirements.txt
simple_image_extractor/: ImageExtractor.py  Untitled.ipynb
tests/: test_simple_image_extract.py
