[tool.poetry]
name = "simple-image-extractor"
version = "0.1.0"
description = ""
authors = ["PDJ107 <cxz541@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
numpy = "^1.22.4"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
